test_files/invalid/027-self-as-class-name.man
class self
end

def main()
end
